netpol/allow-hello-busy-netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-hello-busy
spec:
    podSelector: 
      matchLabels:
        app: hello
    ingress:
      - from:
        - podSelector:
            matchLabels:
              hello: ok
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: stage
          podSelector:
            matchLabels:
              hello: ok
